--- a/our-services/id/index.html
+++ b/our-services/id/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service 2 - UX, Design & Technology</title>
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/components.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +20,11 @@
                 <li><a href="../../team/index.html">TEAM</a></li>
                 <li><a href="../../contact-us/index.html">CONTACT US</a></li>
             </ul>
+            <div class="hamburger-menu" id="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </nav>
 
@@ -63,5 +69,7 @@
             <p>&copy; 2011 - 2019 UNITED THEMES™</p>
         </div>
     </footer>
+
+    <script src="../../js/main.js"></script>
 </body>
 </html>
