--- a/team/index.html
+++ b/team/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="../css/components.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +22,11 @@
                 <li><a href="index.html">TEAM</a></li>
                 <li><a href="../contact-us/index.html">CONTACT US</a></li>
             </ul>
+            <div class="hamburger-menu" id="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </nav>
 <!-- Team Section -->
@@ -38,7 +46,7 @@
             </div>
            
         </div>
-        <p class="learn-more"><a href="id/index.html">Learn more about our TEAM</a></p>
+        <p class="learn-more"><a href="id/index.html" class="underlineHover">Learn more about our TEAM</a></p>
     </div>
 </section>
 
@@ -51,7 +59,7 @@
             <h1>LET'S MAKE SOMETHING AWESOME <br> TOGETHER</h1>
             <p>Please don’t hesitate in contacting us with any question you may have.<br>
             We will get back to you as soon as possible.</p>
-            <form action="#" method="post">
+            <form id="contactForm">
                 <label for="name">Your Name (required)</label>
                 <input type="text" id="name" name="name" required>
 
@@ -98,5 +106,7 @@
             <p>&copy; 2011 - 2019 UNITED THEMES™</p>
         </div>
     </footer>
+
+    <script src="../js/main.js"></script>
 </body>
 </html>
