Week 3 and 4 Assignment

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <!-- Contact Us Section -->
-    <section id="contact-us" class="contact-us section centered-text">
+    <section id="contact-us" class="contact-us section">
         <div class="container">
             <h1>LET'S MAKE SOMETHING AWESOME <br> TOGETHER</h1>
             <p>Please don’t hesitate in contacting us with any question you may have.<br>
@@ -59,12 +59,12 @@
     </section>
 
         <!-- Services Section -->
-        <section id="services" class="services section centered-text">
+        <section id="services" class="services section">
             <div class="container">
                 <h1>WE HELP BRANDS AND MAKE NEW FANS</h1>
                 <p>We provide the exceptional service we’d want to experience ourselves!</p>
                 <div class="card-container">
-                    <div class="card" style="background-image: url('../photos/our-services/service1.JPG');">
+                    <!-- <div class="card" style="background-image: url('../photos/our-services/service1.JPG');">
                         <div class="card-content">
                             <h3>Strategy,<br> Idea &<br> Concept</h3>
                         </div>
@@ -78,13 +78,13 @@
                         <div class="card-content">
                             <h3>Social Media &<br>Performance Marketing</h3>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
         
         <!-- Team Section -->
-        <section id="team" class="team section centered-text">
+        <section id="team" class="team section">
             <div class="container">
                 <h1>OUR ALL-STAR TEAM</h1>
                 <p>We’ve done it for brands big and small.</p>
