--- a/our-services/index.html
+++ b/our-services/index.html
@@ -36,7 +36,7 @@
             <h1>WE HELP BRANDS AND MAKE NEW FANS</h1>
             <p>We provide the exceptional service we’d want to experience ourselves!</p>
             <div class="card-container">
-                <div class="card" style="background-image: url('../photos/our-services/service1.JPG');">
+                <!-- <div class="card" style="background-image: url('../photos/our-services/service1.JPG');">
                     <div class="card-content">
                         <h3>Strategy,<br> Idea &<br> Concept</h3>
                     </div>
@@ -50,7 +50,7 @@
                     <div class="card-content">
                         <h3>Social Media &<br>Performance Marketing</h3>
                     </div>
-                </div>
+                </div> -->
             </div>
             <p class="learn-more"><a href="id/index.html" class="underlineHover">Learn more about our SERVICE</a></p>
         </div>
