--- a/team/index.html
+++ b/team/index.html
@@ -30,7 +30,7 @@
         </div>
     </nav>
 <!-- Team Section -->
-<section id="team" class="team section centered-text">
+<section id="team" class="team section">
     <div class="container">
         <h1>OUR ALL-STAR TEAM</h1>
         <p>We’ve done it for brands big and small.</p>
@@ -54,7 +54,7 @@
 
 
     <!-- Contact Us Section -->
-    <section id="contact-us" class="contact-us section centered-text">
+    <section id="contact-us" class="contact-us section">
         <div class="container">
             <h1>LET'S MAKE SOMETHING AWESOME <br> TOGETHER</h1>
             <p>Please don’t hesitate in contacting us with any question you may have.<br>
